--- a/src/index.scss
+++ b/src/index.scss
@@ -7,9 +7,14 @@ body {
 
   background-image: linear-gradient(
     to top,
-    black, #14248A
+    #38C98D  , #EBB22C
   );
 
   background-repeat: no-repeat;
   background-attachment: fixed;
+}
+
+.header-menu {
+
+  background-color: #4A4D4D;
 }
