--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,12 @@
 @import "~bootstrap/scss/bootstrap";
 
+
+* {
+
+  font-family: 'Audiowide';
+}
+
+
 body {
 
   height: 100%;
@@ -22,4 +29,10 @@ body {
 .img-linklist {
 
   margin-top: .5rem;
+}
+
+
+.description-card {
+
+  font-size: 1rem;
 }
